--- a/css/aws-view.css
+++ b/css/aws-view.css
@@ -48,7 +48,7 @@
 .aws-btn:active {transform:scale(.9)}
 .aws-btn[href^="#aws-view-close"],
 .aws-btn[href^="#aws-view-toggle-fullscreen"],
-.aws-btn[href^="#aws-view-slideshow"] {top:5vh}
+.aws-btn[href^="#aws-view-slideshow"] {top:2.5vh}
 .aws-btn[href^="#aws-view-close"] {right:5vw}
 .aws-btn[href^="#aws-view-toggle-fullscreen"] {right:calc(5vw + 3rem + 1rem)}
 .aws-btn[href^="#aws-view-slideshow"] {right:calc(5vw + 3rem * 2 + 2rem)}
@@ -63,6 +63,7 @@
 }
 
 .aws-icon {
+    pointer-events:none !important;
     width:1.25rem;
     height:1.25rem;
     display:inline-block;
@@ -141,6 +142,7 @@
 }
 .aws-view_progress {
     z-index:3;
+    pointer-events:none !important;
     width:100%;
     height:4px;
     display:block;
@@ -157,7 +159,8 @@
     max-width:100%;
     height:100%;
     display:block;
-    background-color:rgb(var(--aws-color));
+    background-color:rgb(30,185,199);
+    box-shadow:0 0 3px rgb(30,185,199);
     transition:width 100ms ease-in
 }
 .aws-view_content-wrapper {max-width:1600px; display:block; margin:auto}
@@ -171,6 +174,28 @@
     margin:auto;
     position:relative
 }
+.aws-view_content .aws-view_info {
+    z-index:2;
+    pointer-events:none !important;
+    display:block;
+    line-height:2.5rem;
+    padding:0 .5rem;
+    border-radius:3px;
+    background-color:rgba(var(--btn-color),.65);
+    font-weight:500;
+    font-size:.825rem;
+    color:rgba(255,255,255,.9);
+    text-align:center;
+    text-decoration:none;
+    text-shadow:none;
+    position:absolute;
+    left:1rem;
+    top:1rem
+}
+.aws-view_content .aws-view_info > *[aria-label*=aws-view-show-index],
+.aws-view_content .aws-view_info > *[aria-label*=aws-view-show-count] {width:1.5rem; display:inline-block}
+.aws-view_content .aws-view_info > *[aria-label*=aws-view-show-index] {margin-right:.25rem}
+.aws-view_content .aws-view_info > *[aria-label*=aws-view-show-count] {margin-left:.25rem}
 .aws-view_content .aws-view_box {
     display:block;
     border:3px solid rgb(var(--box-color));
@@ -181,6 +206,8 @@
     box-shadow:0 0 3px rgba(0,0,0,.5);
     transition:width 500ms ease, height 500ms ease, max-width 500ms ease, max-height 500ms ease, transform 50ms ease-out
 }
+.aws-view_content .aws-view_box:hover {cursor:grab}
+.aws-view_content .aws-view_box:active {cursor:grabbing}
 .aws-view_content .aws-view_box > img {pointer-events:none; width:100%; height:100%; object-fit:cover; display:block}
 .aws-view_content .aws-view_box > canvas {pointer-events:none; width:100%; height:100%; display:block}
 @media (max-width:600px){
